tests/exact/exact.exp
Error: error_continues.js:3
  3: ((any: {p: number}): {|p: string|}); // We should get two errors here!
            ^^^^^^^^^^^ object type. Inexact type is incompatible with exact type
  3: ((any: {p: number}): {|p: string|}); // We should get two errors here!
                          ^^^^^^^^^^^^^ object type

Error: error_continues.js:3
  3: ((any: {p: number}): {|p: string|}); // We should get two errors here!
            ^^^^^^^^^^^ object type. This type is incompatible with
  3: ((any: {p: number}): {|p: string|}); // We should get two errors here!
                          ^^^^^^^^^^^^^ object type
  Property `p` is incompatible:
      3: ((any: {p: number}): {|p: string|}); // We should get two errors here!
                    ^^^^^^ number. This type is incompatible with
      3: ((any: {p: number}): {|p: string|}); // We should get two errors here!
                                   ^^^^^^ string

Error: exact_basics.js:49
 49: takesExactlyPerson(subtypeOfPerson); // error
                        ^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
 43: declare function takesExactlyPerson(person: ExactPerson): void;
                                                 ^^^^^^^^^^^ ExactPerson
  Property `first` is incompatible:
     49: takesExactlyPerson(subtypeOfPerson); // error
                            ^^^^^^^^^^^^^^^ property `first`. Property not found in
     43: declare function takesExactlyPerson(person: ExactPerson): void;
                                                     ^^^^^^^^^^^ ExactPerson

Error: exact_basics.js:61
 61: takesExactlyPerson(returnsSubtypeOfPerson());  // error
                        ^^^^^^^^^^^^^^^^^^^^^^^^ Person. Inexact type is incompatible with exact type
 43: declare function takesExactlyPerson(person: ExactPerson): void;
                                                 ^^^^^^^^^^^ ExactPerson

Error: exact_basics.js:71
 71: takesExactlyPerson(returnsExactlyPerson2()); // error
                        ^^^^^^^^^^^^^^^^^^^^^^^ ExactPerson2. This type is incompatible with the expected param type of
 43: declare function takesExactlyPerson(person: ExactPerson): void;
                                                 ^^^^^^^^^^^ ExactPerson
  Property `first` is incompatible:
     71: takesExactlyPerson(returnsExactlyPerson2()); // error
                            ^^^^^^^^^^^^^^^^^^^^^^^ property `first`. Property not found in
     43: declare function takesExactlyPerson(person: ExactPerson): void;
                                                     ^^^^^^^^^^^ ExactPerson

Error: exact_basics.js:85
 85: takesSubtypeOfPerson2(returnsExactlyPerson()); // error
                           ^^^^^^^^^^^^^^^^^^^^^^ ExactPerson. This type is incompatible with the expected param type of
 76: declare function takesSubtypeOfPerson2(person2: Person2): void;
                                                     ^^^^^^^ Person2
  Property `first` is incompatible:
     76: declare function takesSubtypeOfPerson2(person2: Person2): void;
                                                         ^^^^^^^ property `first`. Property not found in
     85: takesSubtypeOfPerson2(returnsExactlyPerson()); // error
                               ^^^^^^^^^^^^^^^^^^^^^^ ExactPerson

Error: exact_basics.js:94
 94: takesPersonPred(returnsExactlyPersonPred()); // error
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ PersonPred. Unsupported exact type
 94: takesPersonPred(returnsExactlyPersonPred()); // error
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ PersonPred

Error: prop_test.js:28
 28:   return pc.state;      // error, since (pc: $Exact<Person>).first may be ""
                 ^^^^^ property `state`. Property not found in
 28:   return pc.state;      // error, since (pc: $Exact<Person>).first may be ""
              ^^ Person

Error: unsealed.js:14
 14: f(o); // error: o incompatible with exact type
       ^ object literal. This type is incompatible with the expected param type of
  4: function f(o: {p: string} | $Exact<{}>): string {
                   ^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s)
  Member 1:
    4: function f(o: {p: string} | $Exact<{}>): string {
                     ^^^^^^^^^^^ object type
  Error:
   14: f(o); // error: o incompatible with exact type
         ^ object literal. This type is incompatible with
    4: function f(o: {p: string} | $Exact<{}>): string {
                     ^^^^^^^^^^^ object type
    Property `p` is incompatible:
        4: function f(o: {p: string} | $Exact<{}>): string {
                         ^^^^^^^^^^^ property `p`. Property not found in
       14: f(o); // error: o incompatible with exact type
             ^ object literal
  Member 2:
    4: function f(o: {p: string} | $Exact<{}>): string {
                                   ^^^^^^^^^^ object type
  Error:
   14: f(o); // error: o incompatible with exact type
         ^ object literal. Inexact type is incompatible with exact type
    4: function f(o: {p: string} | $Exact<{}>): string {
                                   ^^^^^^^^^^ object type

Error: unsealed2.js:15
 15:     return x.q;
                ^^^ string. This type is incompatible with the expected return type of
 13: function f(_): number {
                    ^^^^^^ number

Error: use_ops.js:2
  2: var b: { p: {| q: null |} } = a; // error a != b, with nested info for a.p != b.p
                                   ^ object type. This type is incompatible with
  2: var b: { p: {| q: null |} } = a; // error a != b, with nested info for a.p != b.p
            ^^^^^^^^^^^^^^^^^^^^ object type
  Property `p` is incompatible:
      1: declare var a: { p: { q: null } };
                             ^^^^^^^^^^^ object type. Inexact type is incompatible with exact type
      2: var b: { p: {| q: null |} } = a; // error a != b, with nested info for a.p != b.p
                     ^^^^^^^^^^^^^ object type

Error: use_ops.js:6
  6: f(o); // error: inexact arg incompatible with exact param (error should indicate exactness issue)
       ^ object type. Inexact type is incompatible with exact type
  4: function f(o: {| p: null |}) {}
                   ^^^^^^^^^^^^^ object type


Found 12 errors
